--- a/tips.html
+++ b/tips.html
@@ -58,13 +58,34 @@
             <div class="search"><input type="text" placeholder="Search"></div>
             <div class="button"><button> Go </button></div>
         </nav>
-        <h2>
-            !
+        <br>
+        <br>
+        <h2 id="internship">
+            An internship is a professional learning experience that offers meaningful, practical work related to a
+            student's field of study or career interest. An internship gives a student the opportunity for career
+            exploration and development, and to learn new skills.
+        </h2>
+
+        <img id=imageintern src="img/internship.jpg" width="500px">
+
+        <h2 id="travelinsurance">
+            Travel Insurance, why do I need one?
+            Travel insurance gives you tranquility with basic coverages, protects you with medical and medicines
+            coverages, missing baggage, reemburse in case of trip cancelling, assistance in case of theft or losing a
+            document and many more.
+            Travel safe knowing that you are covered in any eventuality!
         </h2>
 
     </header>
-    <a id="internship" href="https://youtube.com/watch?v=cVWU1OtUOBA" target="blank">
+    <a id="intern" href="https://youtube.com/watch?v=cVWU1OtUOBA" target="blank">
         Internship </a>
+    <br>
+    <br>
+    <br>
+    <a id="insurance"
+        href="https://www.assistcard.com/br?gad_source=1&gclid=Cj0KCQjwhb60BhClARIsABGGtw-4jlbzGHx2MsRJ3iJDTPKz4-RM3aXFxFwfd2UvII5E_crUA6fwmt8aAhlPEALw_wcB"
+        target="blank">
+        Travel Insurance </a>
     <br>
     <br>
     <br>
